--- a/src/main/webapp/scripts/app/entities/mensaje/mensaje-detail.html
+++ b/src/main/webapp/scripts/app/entities/mensaje/mensaje-detail.html
@@ -1,67 +1,10 @@
 
 <div>
-    <h2><span translate="plumbeerApp.mensaje.detail.title">Mensaje</span> {{mensaje.id}}</h2>
-    <div class="table-responsive">
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th translate="entity.detail.field">Field</th>
-                <th translate="entity.detail.value">Value</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>
-                    <span translate="plumbeerApp.mensaje.asunto">Asunto</span>
-                </td>
-                <td>
-                    <span class="form-control-static">{{mensaje.asunto}}</span>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <span translate="plumbeerApp.mensaje.cuerpo">Cuerpo</span>
-                </td>
-                <td>
-                    <span class="form-control-static">{{mensaje.cuerpo}}</span>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <span translate="plumbeerApp.mensaje.fecha">Fecha</span>
-                </td>
-                <td>
-                    <span class="form-control-static">{{mensaje.fecha | date:'medium'}}</span>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <span translate="plumbeerApp.mensaje.leido">Leido</span>
-                </td>
-                <td>
-                    <span class="form-control-static">{{mensaje.leido}}</span>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <span translate="plumbeerApp.mensaje.emisor">emisor</span>
-                </td>
-                <td>
-                    {{mensaje.emisor.id}}
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <span translate="plumbeerApp.mensaje.receptor">receptor</span>
-                </td>
-                <td>
-                    {{mensaje.receptor.id}}
-                </td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-
+    <h2>{{mensaje.asunto}}</h2>
+    <div style="font-size: smaller; margin-top:2%;">Para: {{mensaje.receptor.firstName}} {{mensaje.receptor.lastName}}</div>
+    <div style="font-size: smaller">De: {{mensaje.emisor.firstName}} {{mensaje.emisor.firstName}}</div>
+    <div style="font-size:smaller">Enviado: {{mensaje.fecha | date:'medium'}}</div>
+    <div style="font-size: large; margin-top:2%; margin-bottom: 5%">{{mensaje.cuerpo}}</div>
     <button type="submit"
             onclick="window.history.back()"
             class="btn btn-info">
