--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -1,6 +1,6 @@
 <div ng-cloak>
     <div class="row">
-        <img src="http://imageshack.com/a/img923/3688/6bT5wI.png" style="display:inline-block;position:absolute;">
+        <a href="https://github.com/MiguelPerezAlo/plumbeer"><img src="http://imageshack.com/a/img923/3688/6bT5wI.png" style="display:inline-block;position:absolute;"></a>
         <div class="col-md-12 col-lg-12" style="margin-left:45%; margin-top:3%"><h1 style="display:inline-block; margin-left: -6% !important;"><b>Bienvenidos a Plumb</b><o style="color:mediumseagreen"><b>ee</b></o><b>r</b></h1>
             <div class="row" style="margin-top: 2%">
                 <div class="col-md-2 col-lg-2">
