--- a/src/main/webapp/scripts/app/entities/mensaje/mensaje-dialog.html
+++ b/src/main/webapp/scripts/app/entities/mensaje/mensaje-dialog.html
@@ -4,15 +4,10 @@
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 ng-click="clear()">&times;</button>
-        <h4 class="modal-title" id="myMensajeLabel" translate="plumbeerApp.mensaje.home.createOrEditLabel">Create or edit a Mensaje</h4>
+        <h4 class="modal-title" id="myMensajeLabel">Escribir un nuevo mensaje</h4>
     </div>
     <div class="modal-body">
         <jh-alert-error></jh-alert-error>
-        <div class="form-group">
-            <label for="id" translate="global.field.id">ID</label>
-            <input type="text" class="form-control" id="id" name="id"
-                    ng-model="mensaje.id" readonly />
-        </div>
         <div class="form-group">
             <label class="control-label" translate="plumbeerApp.mensaje.asunto" for="field_asunto">Asunto</label>
             <input type="text" class="form-control" name="asunto" id="field_asunto"
