Navbar y setting finalizado

--- a/src/main/webapp/scripts/app/account/password/password.html
+++ b/src/main/webapp/scripts/app/account/password/password.html
@@ -1,62 +1,62 @@
 <div>
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h2 translate="password.title" translate-values="{username: '{{account.login}}'}">Password for [<b>{{account.login}}</b>]</h2>
+            <h2>Password de [<b>{{account.login}}</b>]</h2>
 
-            <div class="alert alert-success" ng-show="success" translate="password.messages.success">
-                <strong>Password changed!</strong>
+            <div class="alert alert-success" ng-show="success">
+                <strong>Password cambiado.</strong>
             </div>
-            <div class="alert alert-danger" ng-show="error"  translate="password.messages.error">
-                <strong>An error has occurred!</strong> The password could not be changed.
+            <div class="alert alert-danger" ng-show="error">
+                <strong>Ha ocurrido un error.</strong>
             </div>
 
-            <div class="alert alert-danger" ng-show="doNotMatch" translate="global.messages.error.dontmatch">
-                The password and its confirmation do not match!
+            <div class="alert alert-danger" ng-show="doNotMatch">
+                No coinciden los passwords escritos.
             </div>
 
             <form name="form" role="form" novalidate ng-submit="changePassword()" show-validation>
 
                 <div class="form-group">
-                    <label class="control-label" for="password" translate="global.form.newpassword">New password</label>
-                    <input type="password" class="form-control" id="password" name="password" placeholder="{{'global.form.newpassword.placeholder' | translate}}"
+                    <label class="control-label" for="password">Nuevo password</label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Nuevo password"
                            ng-model="password" ng-minlength=5 ng-maxlength=50 required>
                     <div ng-show="form.password.$dirty && form.password.$invalid">
                         <p class="help-block"
-                           ng-show="form.password.$error.required" translate="global.messages.validate.newpassword.required">
-                            Your password is required.
+                           ng-show="form.password.$error.required">
+                            El password es obligatorio.
                         </p>
                         <p class="help-block"
-                           ng-show="form.password.$error.minlength" translate="global.messages.validate.newpassword.minlength">
-                            Your password is required to be at least 5 characters.
+                           ng-show="form.password.$error.minlength">
+                            Tu password debe tener un mínimo de 5 caracteres
                         </p>
                         <p class="help-block"
-                           ng-show="form.password.$error.maxlength" translate="global.messages.validate.newpassword.maxlength">
-                            Your password cannot be longer than 50 characters.
+                           ng-show="form.password.$error.maxlength">
+                            Tu password sólo puede tener un máximo de 50 caracteres.
                         </p>
                     </div>
                     <password-strength-bar password-to-check="password"></password-strength-bar>
                 </div>
                 <div class="form-group">
-                    <label class="control-label" for="confirmPassword" translate="global.form.confirmpassword">New password confirmation</label>
-                    <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="{{'global.form.confirmpassword.placeholder' | translate}}"
+                    <label class="control-label" for="confirmPassword">Confirma nuevo password</label>
+                    <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Confirma password"
                            ng-model="confirmPassword" ng-minlength=5 ng-maxlength=50 required>
                     <div ng-show="form.confirmPassword.$dirty && form.confirmPassword.$invalid">
                         <p class="help-block"
-                           ng-show="form.confirmPassword.$error.required" translate="global.messages.validate.confirmpassword.required">
-                            Your confirmation password is required.
+                           ng-show="form.confirmPassword.$error.required">
+                            La confirmación es obligatoria.
                         </p>
                         <p class="help-block"
-                           ng-show="form.confirmPassword.$error.minlength" translate="global.messages.validate.confirmpassword.minlength">
-                            Your confirmation password is required to be at least 5 characters.
+                           ng-show="form.confirmPassword.$error.minlength">
+                            Tu confirmación debe tener un mínimo de 5 caracteres.
                         </p>
                         <p class="help-block"
-                           ng-show="form.confirmPassword.$error.maxlength" translate="global.messages.validate.confirmpassword.maxlength">
-                            Your confirmation password cannot be longer than 50 characters.
+                           ng-show="form.confirmPassword.$error.maxlength">
+                            Tu confirmación sólo puede tener un máximo de 50 caracteres.
                         </p>
                     </div>
                 </div>
 
-                <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary" translate="password.form.button">Save</button>
+                <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary">Guardar</button>
             </form>
         </div>
     </div>
