Proyecto finalizado todo OK

--- a/src/main/webapp/scripts/app/entities/mensaje/mensaje-dialog.html
+++ b/src/main/webapp/scripts/app/entities/mensaje/mensaje-dialog.html
@@ -28,10 +28,10 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clear()">
-            <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span translate="entity.action.cancel">Cancel</span>
+            <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span>Cancelar</span>
         </button>
         <button type="submit" ng-disabled="editForm.$invalid || isSaving" class="btn btn-primary">
-            <span class="glyphicon glyphicon-save"></span>&nbsp;<span translate="entity.action.save">Save</span>
+            <span class="glyphicon glyphicon-export"></span>&nbsp;<span>Enviar</span>
         </button>
     </div>
 </form>
